--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
     <title>Aini's Portfolio</title>
 </head>
 <body>
@@ -74,25 +75,25 @@
             <div class="pro">
                 <a class="project1" target="_blank" href="https://github.com/ainylestari/Glowify">
                     <div class="ob1"></div>
-                    <img src="asset/project2.png" alt="">
+                    <img src="asset/project2.png" alt="Glowify - Beauty Lifestyle">
                     <div class="cap">
                         <button>Beauty Lifestyle App</button>
                         <span class="judul">Glowify</span>
                         <span class="tag">Website App || Website Design</span>
                     </div>
                 </a>
-                <a class="project2" target="_blank" href="">
+                <a class="project2" target="_blank" href="https://github.com/ainylestari/Portfolio">
                     <div class="ob1"></div>
-                    <img src="asset/project1.png" alt="">
+                    <img src="asset/project1.png" alt="Aini's Portfolio">
                     <div class="cap">
                         <button>Personal Portfolio</button>
                         <span class="judul">Portfolio</span>
                         <span class="tag">Website Design || Modern Website</span>
                     </div>
                 </a>
-                <a class="project3" target="_blank" href="https://www.figma.com/proto/UKlINa6OCH1FgvwrDeCW8o/choose-your-shoes?node-id=72-1270&starting-point-node-id=13%3A22">
+                <a class="project3" target="_blank" href="https://www.figma.com/proto/UKlINa6OCH1FgvwrDeCW8o/choose-your-shoes?node-id=13-22&starting-point-node-id=13%3A22">
                     <div class="ob1"></div>
-                    <img src="asset/project3.png" alt="">
+                    <img src="asset/project3.png" alt="Stepz - choose your shoes">
                     <div class="cap">
                         <button>E-Commerce App</button>
                         <span class="judul">Stepz</span>
@@ -122,17 +123,15 @@
                 <a target="_blank" href="mailto:ainilestari206@gmail.com" class="account" uname="ainilestari206@gmail.com">
                     <img src="https://cdn4.iconfinder.com/data/icons/social-media-logos-6/512/112-gmail_email_mail-512.png" alt="Gmail">
                 </a>
-                <a target="_blank" href="https://github.com/ainilestari" class="account" uname="ainylestari">
+                <a target="_blank" href="https://github.com/ainylestari" class="account" uname="ainylestari">
                     <img src="https://cdn.iconscout.com/icon/free/png-256/free-github-logo-icon-download-in-svg-png-gif-file-formats--social-media-pack-logos-icons-3073768.png?f=webp&w=256" alt="GitHub">
                 </a>
-                <a target="_blank" href="https://linkedin.com/" class="account" uname="Nur Aini Dwi Lestari">
+                <a target="_blank" href="https://linkedin.com/in/ainilestari" class="account" uname="Nur Aini Dwi Lestari">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/81/LinkedIn_icon.svg/2048px-LinkedIn_icon.svg.png" alt="LinkedIn">
                 </a>
             </div>
             <div class="tool"></div>
         </div>     
     </div>
-
-    <script src="script.js"></script>
 </body>
 </html>
