--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/81/LinkedIn_icon.svg/2048px-LinkedIn_icon.svg.png" alt="LinkedIn">
                 </a>
             </div>
-            <div class="tool"></div>
+            <div class="capt"></div>
         </div>     
     </div>
 </body>
