--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
     <title>Aini's Portfolio</title>
 </head>
 <body>
@@ -130,8 +129,10 @@
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/81/LinkedIn_icon.svg/2048px-LinkedIn_icon.svg.png" alt="LinkedIn">
                 </a>
             </div>
-            <div class="capt"></div>
+            <div class="tool"></div>
         </div>     
     </div>
+    
+    <script src="script.js"></script>
 </body>
 </html>
